19th Requiriment - Fixed custom gender input visibility to be dinamic

--- a/style.css
+++ b/style.css
@@ -49,3 +49,7 @@
 .gender-radios {
   display: flex;
 }
+
+.input-genero {
+  display: none;
+}
